--- a/REST-API-Basics/model/src/main/resources/database.properties
+++ b/REST-API-Basics/model/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 driverClass=com.mysql.cj.jdbc.Driver
 url = jdbc:mysql://localhost:3306/gift_certificates
-userName = root;
-password = 3325;
-maximumPoolSize = 8;
+userName = root
+password = 3325
+maximumPoolSize = 8
