--- a/REST-API-Basics/model/src/main/resources/database.properties
+++ b/REST-API-Basics/model/src/main/resources/database.properties
@@ -1,5 +1,5 @@
-driverClass=com.mysql.cj.jdbc.Driver
-url = jdbc:mysql://localhost:3306/gift_certificates
-userName = root
-password = 3325
-maximumPoolSize = 8
+dataSource.driverClass=com.mysql.cj.jdbc.Driver
+dataSource.jdbcUrl = jdbc:mysql://localhost:3306/gift_certificates?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+dataSource.username = root
+dataSource.password = 3325
+dataSource.maximumPoolSize = 8
