Add pagination info for HATEOAS

--- a/REST-API-Advanced/pom.xml
+++ b/REST-API-Advanced/pom.xml
@@ -19,13 +19,12 @@
         <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <start-class>com.epam.esm.web.config.ApplicationEntryPoint</start-class>
     </properties>
-
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.4.5</version>
     </parent>
-
 </project>
