--- a/REST-API-Advanced/web/src/main/resources/application.properties
+++ b/REST-API-Advanced/web/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/gift_certificates?allowPublicK
 spring.datasource.username=root
 spring.datasource.password=3325
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true
 spring.jpa.mapping-resources=orm.xml
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
