--- a/REST-API-Security/web/src/main/resources/application.properties
+++ b/REST-API-Security/web/src/main/resources/application.properties
@@ -15,8 +15,9 @@ jwt.header=Authorization
 spring.main.allow-bean-definition-overriding=true
 spring.security.oauth2.client.registration.google.client-id=844900885351-cf6nm8l7bjmva5gt1nfunu1gt1bkqdj3.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
+
 spring.security.oauth2.client.registration.okta.client-id=0oa3oms0ckBGM19eD5d7
 spring.security.oauth2.client.registration.okta.client-secret=7vgkvFG4juywrvkq91qfwONIWC5MlFU0HAT39j3U
 spring.security.oauth2.client.provider.okta.issuer-uri=https://dev-77363240.okta.com/oauth2/default
 spring.security.oauth2.client.registration.okta.client-name=Okta
-spring.security.oauth2.client.registration.okta.scope=openid,email,profile
+spring.security.oauth2.client.registration.okta.scope=openid,profile,email
